Add support for service.type=LoadBalancer

--- a/syslog-ng-helm-chart/templates/service.yaml
+++ b/syslog-ng-helm-chart/templates/service.yaml
@@ -4,6 +4,10 @@ metadata:
   name: {{ include "syslog-ng.fullname" . }}
   labels:
     {{- include "syslog-ng.labels" . | nindent 4 }}
+  {{- with .Values.service.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   {{- if eq .Values.service.type "externalip" }}
   
@@ -13,15 +17,49 @@ spec:
   {{- end }}
   {{- else}}
   type: {{ .Values.service.type }}
+  {{- if eq .Values.service.type "LoadBalancer" }}
+  {{- with .Values.service.externalTrafficPolicy }}
+  externalTrafficPolicy: {{ . }}
+  {{- end }}
+  {{- end }}
   {{- end }}
   ports:
     - name: udp-port
       port: 514
       targetPort: 514
       protocol: UDP
+    {{- if ne .Values.service.type "LoadBalancer" }}
+    - name: tcp-port
+      port: 601
+      targetPort: 601
+      protocol: TCP 
+    {{- end }}
+  selector:
+    {{- include "syslog-ng.selectorLabels" . | nindent 4 }}
+
+# LoadBalancer does not allow ports with different protocols
+{{- if eq .Values.service.type "LoadBalancer" }}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ include "syslog-ng.fullname" . }}-tcp
+  labels:
+    {{- include "syslog-ng.labels" . | nindent 4 }}
+  {{- with .Values.service.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+spec:
+  type: {{ .Values.service.type }}
+  {{- with .Values.service.externalTrafficPolicy }}
+  externalTrafficPolicy: {{ . }}
+  {{- end }}
+  ports:
     - name: tcp-port
       port: 601
       targetPort: 601
       protocol: TCP 
   selector:
     {{- include "syslog-ng.selectorLabels" . | nindent 4 }}
+{{- end }}
